# iotdb

./: .asf.yaml  .bash_profile  .checkstyle  .clang-format  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .jqassistant.yml  .local.ci  .pre-commit-config.yaml  .travis.yml  0910_test.txt  0910_test01.txt  AGENTS.md  BUILD_PROBLEMS.md  CLAUDE.md  CONTRIBUTING.md  Code Summary  Code Summary.md  DEPENDENCIES  DISCLAIMER  DataPartitionTableIntegrityCheck_README.md  IOTDB_SESSION_COMPONENTS_ANALYSIS.md  Jenkinsfile  LICENSE  LICENSE-binary  License  License-binary  NOTICE  NOTICE-binary  PARAMETER_EXTRACTOR_DESCRIPTION.md  PARAMETER_LOOKUP_SCOPE_ANALYSIS.md  PARAMETER_NODE_EXPLANATION.md  PARAMETER_REPLACEMENT_LOCATION.md  PARAMETER_VALIDATION_COMPARISON.md  PREPARED_STATEMENT_IMPLEMENTATION_SUMMARY.md  PREPARED_STATEMENT_MEMORY_MANAGEMENT.md  (+64 more)
client-cpp/: CMakeLists.txt  README.md  SessionExample.cpp  compile.sh  compile_iotdb_session_lib.sh  pom.xml  readme  readme.md  rpc.thrift
client-cpp/Session/: IOTDBSession.h
client-cpp/client-cpp-example/: pom.xml
client-cpp/client-cpp-example/src/: CMakeLists.txt  SessionExample.cpp
client-cpp/cpp_demo/: SessionExample.cpp  compile_demo.sh  demo.cpp
client-cpp/example/: SessionExample.cpp
client-cpp/src/: IOTDBSession.cpp  IOTDBSession.h  SessionExample.cpp
client-cpp/src/assembly/: client-cpp.xml
client-cpp/src/main/: CMakeLists.txt  IOTDBSession.cpp  IOTDBSession.h  Session.cpp  Session.h
client-cpp/src/test/: CMakeLists.txt  compile_test.sh  main.cpp
client-cpp/src/test/cpp/: sessionIT.cpp
client-cpp/tools/: pom.xml
client-cpp/tools/boost/: pom.xml
client-cpp/tools/thrift/: pom.xml
client/client-cpp/src/main/: CMakeLists.txt
client/client-cpp/src/test/: CMakeLists.txt
example/client-cpp-example/src/: AlignedTimeseriesSessionExample.cpp  CMakeLists.txt  MultiSvrNodeClient.cpp  SessionExample.cpp  SessionTableModelExample.cpp  TableModelSessionExample.cpp  iotdbclient.cpp  iotdbclient.h  iotdbtest.cpp  iotdbtest.h  table_example.c  tree_example.c
iotdb-client/client-cpp/: CMakeLists.txt  README.md  README_zh.md  pom.xml  pom.xml.versionsBackup
iotdb-client/client-cpp/cmake/: CheckCxx11Abi.cmake  FetchBoost.cmake  FetchBuildTools.cmake  FetchOpenSSL.cmake  FetchThrift.cmake  GenerateThriftSources.cmake  InstallOpenSSLRuntime.cmake  IotdbResolveTarball.cmake  iotdb-session-config.cmake.in  iotdb-session.pc.in
iotdb-client/client-cpp/examples/: AlignedTimeseriesSessionExample.cpp  CMakeLists.txt  MultiSvrNodeClient.cpp  README.md  README_zh.md  SessionExample.cpp  table_example.c
iotdb-client/client-cpp/src/assembly/: client-cpp.xml
iotdb-client/client-cpp/src/include/: AbstractSessionBuilder.h  Column.h  ColumnDecoder.h  Common.h  Date.h  DeviceID.h  Endpoint.h  Export.h  Optional.h  Session.h  SessionBuilder.h  SessionC.h  SessionConfig.h  SessionDataSet.h  SessionPool.h  Status.h  TableSession.h  TableSessionBuilder.h  TsBlock.h
iotdb-client/client-cpp/src/main/: AbstractSessionBuilder.h  CMakeLists.txt  Column.cpp  Column.h  ColumnDecoder.cpp  ColumnDecoder.h  Common.cc  Common.cpp  Common.h  DeviceID.h  Enums.h  IoTDBRpcDataSet.cpp  IoTDBRpcDataSet.h  NodesSupplier.cpp  NodesSupplier.h  PreparedParameterBinary.cpp  PreparedParameterBinary.h  Session.cpp  Session.h  SessionBuilder.h  SessionC.cpp  SessionC.h  SessionConnection.cpp  SessionConnection.h  SessionDataSet.cpp  SessionDataSet.h  SessionPool.cpp  SessionPool.h  TableSession.cpp  TableSession.h  TableSessionBuilder.h  ThriftConnection.cpp  ThriftConnection.h  TsBlock.cpp  TsBlock.h
iotdb-client/client-cpp/src/rpc/: IoTDBRpcDataSet.cpp  IoTDBRpcDataSet.h  NodesSupplier.cpp  NodesSupplier.h  RpcCommon.cpp  RpcCommon.h  SessionConnection.cpp  SessionConnection.h  SessionDataSetFactory.h  SessionImpl.h  ThriftConnection.cpp  ThriftConnection.h  ThriftConvert.cpp  ThriftConvert.h
iotdb-client/client-cpp/src/session/: Column.cpp  ColumnDecoder.cpp  Common.cpp  Date.cpp  Session.cpp  SessionC.cpp  SessionDataSet.cpp  SessionPool.cpp  TableSession.cpp  TsBlock.cpp
iotdb-client/client-cpp/src/test/: CMakeLists.txt  TestCredentials.h  main.cpp  main_Relational.cpp  main_c.cpp  main_c_Relational.cpp
iotdb-client/client-cpp/test/: CMakeLists.txt  main.cpp
iotdb-client/client-cpp/test/catch2/: .gitignore
iotdb-client/client-cpp/test/cpp/: sessionCIT.cpp  sessionCRelationalIT.cpp  sessionIT.cpp  sessionRelationalIT.cpp
iotdb-client/client-py/resources/: pyproject.toml  setup.py
iotdb-core/ainode/: .gitignore  README_ZH.md  ainode.spec  ainode.xml  build_binary.py  pom.xml  pyproject.toml  test_debug.py  tests.py
iotdb-core/ainode/ai/ainode/: client.py  config.py  constant.py  exception.py  handler.py  log.py  script.py  service.py
iotdb-core/ainode/ainode/conf/: git.properties  pom.properties
iotdb-core/ainode/ainode/core/: ai_node.py  ainode.py  client.py  config.py  constant.py  exception.py  handler.py  log.py  script.py  service.py
iotdb-core/ainode/conf/: git.properties  pom.properties
iotdb-core/ainode/iotdb/: Session.py  table_session_pool.py
iotdb-core/ainode/iotdb/ainode/: attribute.py  client.py  config.py  constant.py  exception.py  factory.py  handler.py  inference.py  log.py  parser.py  script.py  service.py  storage.py  util.py
iotdb-core/ainode/iotdb/conf/: git.properties  pom.properties
iotdb-core/ainode/iotdb/dbapi/: Connection.py
iotdb-core/ainode/iotdb/sqlalchemy/: IoTDBSQLCompiler.py
iotdb-core/ainode/iotdb/template/: MeasurementNode.py  Template.py
iotdb-core/ainode/iotdb/utils/: Field.py  IoTDBConstants.py  NumpyTablet.py  SessionDataSet.py  Tablet.py  iotdb_rpc_dataset.py  rpc_utils.py
iotdb-core/ainode/resources/: pom.properties  syncPythonVersion.groovy
iotdb-core/ainode/resources/conf/: ainode-env.bat  ainode-env.sh  iotdb-ainode.properties
iotdb-core/ainode/resources/sbin/: remove-ainode.bat  (+5 more)
iotdb-core/ainode/standalone_finetune/: __init__.py  __main__.py  cli.py  config.py
iotdb-core/ainode/tests/: test_ai_node_restart.py
(+40536 files in other folders)
